# project_ini_parser

./: CMakeLists.txt  README.md  tip.pc.in
examples/: driver_tip.cpp  hagman.ini  test.ini
tip/: tip.cpp
